--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,16 @@
 </servlet-mapping>
 
 <servlet>
+    <servlet-name>AdminController</servlet-name>
+    <servlet-class>com.docudigitalsds.controller.AdminController</servlet-class>
+</servlet>
+
+<servlet-mapping>
+    <servlet-name>AdminController</servlet-name>
+    <url-pattern>/AdminController</url-pattern>
+</servlet-mapping>
+
+<servlet>
     <servlet-name>HelloController</servlet-name>
     <servlet-class>com.docudigitalsds.controller.HelloController</servlet-class>
 </servlet>
