legal retention date controller CRUD finished

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
 <servlet>
     <servlet-name>LoginController</servlet-name>
-    <servlet-class>com.docudigitalsds.controller.LoginController</servlet-class>
+    <servlet-class>com.docudigitalsds.controller.viewsController.LoginController</servlet-class>
 </servlet>
 
 <servlet-mapping>
@@ -16,23 +16,43 @@
 </servlet-mapping>
 
 <servlet>
-    <servlet-name>AdminController</servlet-name>
-    <servlet-class>com.docudigitalsds.controller.AdminController</servlet-class>
+    <servlet-name>HomeController</servlet-name>
+    <servlet-class>com.docudigitalsds.controller.viewsController.HomeController</servlet-class>
 </servlet>
 
 <servlet-mapping>
-    <servlet-name>AdminController</servlet-name>
-    <url-pattern>/AdminController</url-pattern>
+    <servlet-name>HomeController</servlet-name>
+    <url-pattern>/HomeController</url-pattern>
 </servlet-mapping>
 
 <servlet>
     <servlet-name>CategoryController</servlet-name>
-    <servlet-class>com.docudigitalsds.controller.CategoryController</servlet-class>
+    <servlet-class>com.docudigitalsds.controller.gestionDocumentoControlller.CategoryController</servlet-class>
 </servlet>
 
 <servlet-mapping>
     <servlet-name>CategoryController</servlet-name>
     <url-pattern>/CategoryController</url-pattern>
+</servlet-mapping>
+
+<servlet>
+    <servlet-name>LegalRetentionDateController</servlet-name>
+    <servlet-class>com.docudigitalsds.controller.gestionDocumentoControlller.LegalRetentionDateController</servlet-class>
+</servlet>
+
+<servlet-mapping>
+    <servlet-name>LegalRetentionDateController</servlet-name>
+    <url-pattern>/LegalRetentionDateController</url-pattern>
+</servlet-mapping>
+
+<servlet>
+    <servlet-name>PhysicalLocationsController</servlet-name>
+    <servlet-class>com.docudigitalsds.controller.gestionDocumentoControlller.PhysicalLocationsController</servlet-class>
+</servlet>
+
+<servlet-mapping>
+    <servlet-name>PhysicalLocationsController</servlet-name>
+    <url-pattern>/PhysicalLocationsController</url-pattern>
 </servlet-mapping>
 
 <servlet>
