--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,19 @@
 
   <build>
     <finalName>docudigitalsds</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.2.2</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>com.example.MainClassName</mainClass> <!-- Reemplaza con la clase principal de tu aplicación -->
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
@@ -96,6 +107,5 @@
           <version>2.8.2</version>
         </plugin>
       </plugins>
-    </pluginManagement>
   </build>
 </project>
