--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
             <configuration>
                 <archive>
                     <manifest>
-                        <mainClass>com.example.MainClassName</mainClass> <!-- Reemplaza con la clase principal de tu aplicación -->
+                        <mainClass>com.docudigitalsds.controller.viewsController.HomeController</mainClass> <!-- Reemplaza con la clase principal de tu aplicación -->
                     </manifest>
                 </archive>
             </configuration>
@@ -93,10 +93,6 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
