--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
           <configuration>
             <archive>
                 <manifest>
-                    <mainClass>com.docudigitalsds.controller.viewsController.LoginController</mainClass> <!-- Reemplaza con la clase principal de tu aplicación -->
+                    <mainClass>src.main.java.com.docudigitalsds.controller.viewsController.LoginController</mainClass> <!-- Reemplaza con la clase principal de tu aplicación -->
                 </manifest>
             </archive>
           </configuration>
