Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_docudigitalsds.yml
+++ b/.github/workflows/main_docudigitalsds.yml
@@ -36,22 +36,13 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: java-app
       
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_74E22F673DB74760A334F00DD98B62A1 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4EDEB47C170B4518920F55EFD496D45A }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D4DAF37D31EE42BFA5E41E1DB7F48C96 }}
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
@@ -59,4 +50,4 @@ jobs:
           app-name: 'DocuDigitalSDS'
           slot-name: 'Production'
           package: '*.war'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_25168A90DAAF41E088C4011C840F5EF6 }}
